# Incident-Threat-Detection-and-Response

./: .env.example  .gitignore  Dockerfile  README.md  README_LANL.md  analyze_lanl_attacks.py  config.yaml  docker-compose.yml  evaluate_lanl.py  import_rba_data.py  pyproject.toml  requirements.txt  run_stress_tests.py  streamlit_app.py  test_lanl_integration.py  train_rba_model.py
detection/: __init__.py  alert_exporter.py  comparison_eval.py  etl.py  features.py  lanl_loader.py  mitre_mapping.py  models.py  response.py  rules.py  rules_config.yaml  scorer.py  streaming.py
docs/: evaluation_metrics.json  index.html
scripts/: generate_results_chart.py
simulation/: __init__.py  attack_scenarios.py  generator.py  schema.py
tests/: test_features.py  test_improvements.py  test_integration.py
ui/: app.py  explore.py
