[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itdr-prototype"
version = "1.0.0"
description = "Continuous Identity Threat Detection and Response (ITDR) Prototype"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Siddharth Mishra", email = "cybersec@psu.edu"}
]
keywords = ["security", "identity", "threat-detection", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas==2.3.3",
    "numpy==2.4.2",
    "scikit-learn==1.8.0",
    "streamlit==1.54.0",
    "faker==40.4.0",
    "matplotlib==3.10.8",
    "plotly==6.5.2",
    "watchdog==6.0.0",
    "joblib==1.5.3",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]
ml-extra = [
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulation*", "detection*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
